# job-hunter-agent

./: .dockerignore  .env.example  .gitignore  .prettierignore  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  FEEDBACK_LOOPS.md  LICENSE  README.md  STRIPE_TODO.md  TECHNICAL_STRUGGLES.md  docker-compose.yml  package.json  project-memory.md  test_apply_isolated.py  test_discovery.py  test_e2e.py  workflow.md
backend/: alembic.ini  docker-compose.yml  requirements.txt  test_apply_flow.py
docs/: DATABASE_ARCHITECTURE.md  TODO.md  live-verification.md  startup-packaging-plan.md
extension/: background.js  manifest.json  popup.html  popup.js
frontend/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
scripts/: JobHunter Agent.command  build-macos-app.sh  linkedin-scraper.js  restart-app.sh  run-headed-live-workflow.js  start-app.sh  start.js  stop-app.sh  test_mcp_discovery.py  test_mcp_standalone.py  test_session.py  test_skyvern_standalone.py  test_stage.py
steer-playwright/: README.md  pyproject.toml
steer-playwright/examples/: smoke_test.py
steer-playwright/src/steer_playwright/: __init__.py  pilot.py
tasks/: lessons.md  remaining.md  todo.md
tests/: debug_location.py  explore_greenhouse_form.py  monitor_quick.py  monitor_session.py  test_apply_isolated.py  test_ashby_submit.py  test_find_no_captcha.py  test_greenhouse_api_submit.py  test_greenhouse_batch.py  test_greenhouse_debug.py  test_greenhouse_human.py  test_greenhouse_submit.py  test_greenhouse_visible.py  test_lever_submit.py  test_react_select.py  (+1 more)
(+366 files in other folders)
