[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steer-playwright"
version = "0.1.0"
description = "Lightweight, steerable Playwright automation helper for form-driven workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "V2 Software LLC" }
]
dependencies = [
  "patchright>=1.58.0",
]

[project.urls]
Homepage = "https://github.com/youngfreezy/job-hunter-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/steer_playwright"]
